--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "jsdom": "^22.1.0"
+  },
+  "devDependencies": {
+    "jest": "^latest_version" // Jest version will be added here
   }
 }
